# track-da-newz

./: .env.example  .gitignore  README.md  config.py  db.py  export.py  pipeline.py  pyproject.toml  requirements.txt  run_daily.py  run_export.py  run_historical.py  run_process.py
collectors/: gdelt_api.py  gdelt_bigquery.py  gnews.py  google_news_rss.py  newsdata.py  rss_direct.py
docs/: about.html  index.html
docs/css/: style.css
docs/data/: articles.json  states-index.json  stats.json
docs/data/by-state/: andhra-pradesh.json  bihar.json  delhi.json  gujarat.json  karnataka.json  kerala.json  madhya-pradesh.json  maharashtra.json  north-india.json  odisha.json  rajasthan.json  tamil-nadu.json  telangana.json  unknown.json  uttar-pradesh.json  west-bengal.json
docs/data/by-year/: 2017.json  2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json  unknown.json
docs/js/: app.js
processors/: deduplicator.py  extractor.py  pass1_filter.py  pass2_extract.py
