[project]
name = "track-da-newz"
version = "0.1.0"
description = "Tracking violence against trans people in India via news articles"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "trafilatura>=1.12.0",
    "google-cloud-bigquery>=3.20.0",
    "google-auth>=2.29.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.4",
    "tenacity>=8.3.0",
    "googlenewsdecoder>=0.1.7",
]
